# Flask-Rich

./: .replit  LICENSE  README.md  pyproject.toml  replit.nix
example/: app.py
src/flask_rich/: __init__.py  core.py
