[tool.poetry]
name = "Flask-Rich"
version = "0.3.0"
description = "Rich implementation for Flask"
license = "MIT"
authors = ["BD103 <dont@stalk.me>"]
readme = "README.md"
repository = "https://github.com/BD103/Flask-Rich"
documentation = "https://bd103.github.io/Flask-Rich"
keywords = ["flask", "extension", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
rich = "^10.13.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.1"

[tool.black]
line-length = 88
# py10 when ready
target-version = ["py39"]
extend-exclude = '''
/(
    | .venv
)/
'''

[tool.isort]
profile = "black"
extend_skip = [".cache"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
